Content and style changes
additional pictures and menu changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timmsy's Art - Art Gallery</title>
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=5">
+    <link rel="stylesheet" href="styles.css?v=6">
 </head>
 <body>
     <header class="header">
@@ -47,7 +47,7 @@
                 <div class="collection-grid">
                     <a href="dc-characters.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/OIP.jpg" alt="DC Characters Collection" class="collection-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/Timmsy_4_Chars.png" alt="DC Characters Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
@@ -86,7 +86,7 @@
 
                     <a href="recovery-art.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://via.placeholder.com/600x450/169B62/ffffff?text=Recovery+Art" alt="Recovery Art Collection" class="collection-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/Recovery_pic1.jpg" alt="Recovery Art Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
@@ -99,7 +99,7 @@
 
                     <a href="miscellaneous.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://via.placeholder.com/600x450/169B62/ffffff?text=Miscellaneous" alt="Miscellaneous Collection" class="collection-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/M_Caine01.jpg" alt="Miscellaneous" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
