Additional gallery changes and format
Updated the gallery page styling and added a new pic

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                     <a href="marvel-characters.html" class="collection-item">
                         <div class="collection-image-container">
-                            <img src="https://via.placeholder.com/600x450/169B62/ffffff?text=Marvel+Characters" alt="Marvel Characters Collection" class="collection-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/Thor.jpg" alt="Marvel Characters Collection" class="collection-image">
                             <div class="collection-overlay">
                                 <span class="collection-link-text">View Collection</span>
                             </div>
@@ -97,7 +97,7 @@
                         </div>
                     </a>
 
-                    <a href="miscellaneous.html" class="collection-item">
+                    <a href="miscellaneous.html" class="collection-item miscellaneous-centered">
                         <div class="collection-image-container">
                             <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/M_Caine01.jpg" alt="Miscellaneous" class="collection-image">
                             <div class="collection-overlay">
