Update notes for Escape from the Clutches of Addiction with revised text

--- a/recovery-art.html
+++ b/recovery-art.html
@@ -80,11 +80,11 @@
                         </div>
                         <div class="gallery-notes">
                             <div class="notes-preview">
-                                <p class="notes-text-preview">From my perspective, this image represents the moment of breaking free. The hands gripping my head and dragging me backward symbolise addiction's constant pull—its pressure, control, and refusal to let go.</p>
+                                <p class="notes-text-preview">This image represents the moment of breaking free. The hands gripping the head and pulling backward symbolise addiction's constant pull—its pressure, control, and refusal to let go.</p>
                                 <button class="expand-notes-btn">Read More</button>
                             </div>
                             <div class="notes-full" style="display: none;">
-                                <p class="notes-text-full">From my perspective, this image represents the moment of breaking free. The hands gripping my head and dragging me backward symbolise addiction's constant pull—its pressure, control, and refusal to let go. Turning my face forward and opening my mouth is an act of resistance: a choice to speak, to breathe, to move in a different direction. The words "This way to escape the clutches of addiction" point toward hope, but not an easy escape—one that requires effort, pain, and determination. It captures the transition where addiction is still close behind, but no longer in control, and where reclaiming my voice and direction becomes the first step toward a life without it.</p>
+                                <p class="notes-text-full">This image represents the moment of breaking free. The hands gripping the head and pulling backward symbolise addiction's constant pull—its pressure, control, and refusal to let go. The figure turning forward and opening their mouth reflects an act of resistance: a choice to speak, to breathe, and to move in a different direction. The words "This way to escape the clutches of addiction" point toward hope, though not an easy escape—one that demands effort, pain, and determination. It captures a transition in which addiction is still present but no longer in control, and where reclaiming one's voice and direction marks the first step toward a life without addiction.</p>
                                 <button class="collapse-notes-btn">Read Less</button>
                             </div>
                         </div>
