Add content protection, update DC Characters page with new image and notes, improve notes styling, remove old images from Music Legends, and clean up repository

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/Timmsy_4_Chars.png">
     
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=7">
+    <link rel="stylesheet" href="styles.css?v=8">
 </head>
 <body>
     <header class="header">
@@ -173,6 +173,7 @@
     </footer>
 
     <script src="menu-script.js"></script>
+    <script src="protection.js"></script>
     <script>
         // Add hover effects for collection items
         document.querySelectorAll('.collection-item').forEach(item => {
