--- a/marvel-characters.html
+++ b/marvel-characters.html
@@ -23,8 +23,8 @@
     <link rel="canonical" href="https://timmsyart.github.io/Files/marvel-characters.html">
     
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=7">
-    <link rel="stylesheet" href="gallery-styles.css?v=7">
+    <link rel="stylesheet" href="styles.css?v=8">
+    <link rel="stylesheet" href="gallery-styles.css?v=8">
 </head>
 <body>
     <header class="header">
@@ -91,5 +91,6 @@
     </footer>
 
     <script src="menu-script.js"></script>
+    <script src="protection.js"></script>
 </body>
 </html>
