--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -23,8 +23,8 @@
     <link rel="canonical" href="https://timmsyart.github.io/Files/miscellaneous.html">
     
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=7">
-    <link rel="stylesheet" href="gallery-styles.css?v=8">
+    <link rel="stylesheet" href="styles.css?v=8">
+    <link rel="stylesheet" href="gallery-styles.css?v=11">
 </head>
 <body>
     <header class="header">
@@ -81,7 +81,7 @@
                         <div class="gallery-notes">
                             <div class="notes-preview">
                                 <p class="notes-text-preview">Stingy Jack was a drunkard long ago. It was said that Jack was a beastly man, even beastlier than the devil himself – a rumour that greatly annoyed the devil.</p>
-                                <button class="expand-notes-btn">Read More</button>
+                                <button class="expand-notes-btn">... read more</button>
                             </div>
                             <div class="notes-full" style="display: none;">
                                 <p class="notes-text-full">Stingy Jack was a drunkard long ago. It was said that Jack was a beastly man, even beastlier than the devil himself – a rumour that greatly annoyed the devil. Outraged and envious, the devil came to Jack one night to collect his soul and take him to hell. Jack was cunning however, and he managed to trick the devil.<br><br>
@@ -99,7 +99,7 @@ Whenever a will-o'-the-wisp was spotted at night it was believed to be Seán na 
 Now, the next time they run out of pumpkin spice lattes at the café, maybe you should take a moment to think of poor Seán na Gealaí, and remember that you don't have it nearly as bad as him!<br><br>
 
 <em>Source: <a href="https://www.gaelchultur.com/en/blog/the-origin-of-the-jack-o-lantern" target="_blank" rel="noopener noreferrer">https://www.gaelchultur.com/en/blog/the-origin-of-the-jack-o-lantern</a></em></p>
-                                <button class="collapse-notes-btn">Read Less</button>
+                                <button class="collapse-notes-btn">... read less</button>
                             </div>
                         </div>
                     </div>
@@ -124,6 +124,7 @@ Now, the next time they run out of pumpkin spice lattes at the café, maybe you 
     </footer>
 
     <script src="menu-script.js"></script>
+    <script src="protection.js"></script>
     <script>
         // Full size image viewer
         document.querySelectorAll('.view-btn').forEach(btn => {
