--- a/music-legends.html
+++ b/music-legends.html
@@ -23,8 +23,8 @@
     <link rel="canonical" href="https://timmsyart.github.io/Files/music-legends.html">
     
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=7">
-    <link rel="stylesheet" href="gallery-styles.css?v=7">
+    <link rel="stylesheet" href="styles.css?v=8">
+    <link rel="stylesheet" href="gallery-styles.css?v=8">
 </head>
 <body>
     <header class="header">
@@ -67,71 +67,8 @@
             <div class="container">
                 <h2 class="section-title">The Collection</h2>
                 <div class="gallery-grid">
-                    <!-- Rolling Stones Images -->
-                    <div class="gallery-item">
-                        <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 1.jpg" alt="The Rolling Stones - Classic" class="gallery-image">
-                            <div class="gallery-overlay">
-                                <button class="view-btn">View Full Size</button>
-                            </div>
-                        </div>
-                        <div class="gallery-info">
-                            <h3 class="gallery-title">The Rolling Stones - Classic</h3>
-                            <p class="gallery-medium">Mixed Media</p>
-                        </div>
-                    </div>
-
-                    <div class="gallery-item">
-                        <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 2.jpg" alt="The Rolling Stones - Vintage" class="gallery-image">
-                            <div class="gallery-overlay">
-                                <button class="view-btn">View Full Size</button>
-                            </div>
-                        </div>
-                        <div class="gallery-info">
-                            <h3 class="gallery-title">The Rolling Stones - Vintage</h3>
-                            <p class="gallery-medium">Mixed Media</p>
-                        </div>
-                    </div>
-
-                    <div class="gallery-item">
-                        <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Rolling Stones 3.jpg" alt="The Rolling Stones - Modern" class="gallery-image">
-                            <div class="gallery-overlay">
-                                <button class="view-btn">View Full Size</button>
-                            </div>
-                        </div>
-                        <div class="gallery-info">
-                            <h3 class="gallery-title">The Rolling Stones - Modern</h3>
-                            <p class="gallery-medium">Mixed Media</p>
-                        </div>
-                    </div>
-
-                    <!-- The Who Images -->
-                    <div class="gallery-item">
-                        <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Who 1.jpg" alt="The Who - Iconic" class="gallery-image">
-                            <div class="gallery-overlay">
-                                <button class="view-btn">View Full Size</button>
-                            </div>
-                        </div>
-                        <div class="gallery-info">
-                            <h3 class="gallery-title">The Who - Iconic</h3>
-                            <p class="gallery-medium">Mixed Media</p>
-                        </div>
-                    </div>
-
-                    <div class="gallery-item">
-                        <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/The Who 2.jpg" alt="The Who - Legendary" class="gallery-image">
-                            <div class="gallery-overlay">
-                                <button class="view-btn">View Full Size</button>
-                            </div>
-                        </div>
-                        <div class="gallery-info">
-                            <h3 class="gallery-title">The Who - Legendary</h3>
-                            <p class="gallery-medium">Mixed Media</p>
-                        </div>
+                    <div class="empty-gallery">
+                        <p class="empty-message">New artwork coming soon...</p>
                     </div>
                 </div>
             </div>
@@ -155,6 +92,7 @@
     </footer>
 
     <script src="menu-script.js"></script>
+    <script src="protection.js"></script>
     <script>
         // Full size image viewer
         document.querySelectorAll('.view-btn').forEach(btn => {
