--- a/recovery-art.html
+++ b/recovery-art.html
@@ -23,8 +23,8 @@
     <link rel="canonical" href="https://timmsyart.github.io/Files/recovery-art.html">
     
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=7">
-    <link rel="stylesheet" href="gallery-styles.css?v=8">
+    <link rel="stylesheet" href="styles.css?v=8">
+    <link rel="stylesheet" href="gallery-styles.css?v=11">
 </head>
 <body>
     <header class="header">
@@ -81,11 +81,11 @@
                         <div class="gallery-notes">
                             <div class="notes-preview">
                                 <p class="notes-text-preview">This image represents the moment of breaking free. The hands gripping the head and pulling backward symbolise addiction's constant pull—its pressure, control, and refusal to let go.</p>
-                                <button class="expand-notes-btn">Read More</button>
+                                <button class="expand-notes-btn">... read more</button>
                             </div>
                             <div class="notes-full" style="display: none;">
                                 <p class="notes-text-full">This image represents the moment of breaking free. The hands gripping the head and pulling backward symbolise addiction's constant pull—its pressure, control, and refusal to let go. The figure turning forward and opening their mouth reflects an act of resistance: a choice to speak, to breathe, and to move in a different direction. The words "This way to escape the clutches of addiction" point toward hope, though not an easy escape—one that demands effort, pain, and determination. It captures a transition in which addiction is still present but no longer in control, and where reclaiming one's voice and direction marks the first step toward a life without addiction.</p>
-                                <button class="collapse-notes-btn">Read Less</button>
+                                <button class="collapse-notes-btn">... read less</button>
                             </div>
                         </div>
                     </div>
@@ -110,6 +110,7 @@
     </footer>
 
     <script src="menu-script.js"></script>
+    <script src="protection.js"></script>
     <script>
         // Full size image viewer
         document.querySelectorAll('.view-btn').forEach(btn => {
