Fix image paths to use GitHub raw URLs from main branch

--- a/dc-characters.html
+++ b/dc-characters.html
@@ -69,7 +69,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="Art_Examples/Marvel_Pic10.JPEG" alt="The Joker - Multiple Expressions" class="gallery-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/main/Art_Examples/Marvel_Pic10.JPEG" alt="The Joker - Multiple Expressions" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
