--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -69,7 +69,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/Stingy_Jack.jpg" alt="Stingy Jack" class="gallery-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/main/Art_Examples/Stingy_Jack.JPEG" alt="Stingy Jack" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
