--- a/recovery-art.html
+++ b/recovery-art.html
@@ -69,7 +69,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <div class="gallery-image-container">
-                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/TimmsyArt-patch-1/Escape from the Clutches of Addiction.jpg" alt="Escape from the Clutches of Addiction" class="gallery-image">
+                            <img src="https://raw.githubusercontent.com/TimmsyArt/Files/main/Art_Examples/Recovery_5.JPEG" alt="Escape from the Clutches of Addiction" class="gallery-image">
                             <div class="gallery-overlay">
                                 <button class="view-btn">View Full Size</button>
                             </div>
