--- a/marvel-characters.html
+++ b/marvel-characters.html
@@ -24,7 +24,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css?v=8">
-    <link rel="stylesheet" href="gallery-styles.css?v=8">
+    <link rel="stylesheet" href="gallery-styles.css?v=12">
 </head>
 <body>
     <header class="header">
@@ -82,15 +82,30 @@
                 </div>
             </div>
         </section>
+
+        <section class="copyright-notice">
+            <div class="container">
+                <p>All artwork is protected by copyright. Unauthorized reproduction or distribution is prohibited.</p>
+                <p>For licensing inquiries: <a href="mailto:TimmsyNo1@iCloud.com">TimmsyNo1@iCloud.com</a></p>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 LD Gallery / Timmsy's Art. All rights reserved.</p>
+        <div class="container footer-content">
+            <p class="footer-left">&copy; <span class="copyright-year">2025</span> Timmy's Art | All Rights Reserved | <a href="terms-of-use.html" style="color: #00BFFF; font-weight: 600; text-decoration: underline; font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Terms of Use</a></p>
+            <p class="footer-right" style="font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #fff;">| A v I d Digital |</p>
         </div>
     </footer>
 
     <script src="menu-script.js"></script>
+    <script>
+        // Auto-update copyright year
+        document.querySelectorAll('.copyright-year').forEach(el => {
+            el.textContent = new Date().getFullYear();
+        });
+    </script>
     <script src="protection.js"></script>
+    <script src="canvas-protection.js"></script>
 </body>
 </html>
